fixed pretitle & gap

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -54,6 +54,7 @@
 
   &__pretitle {
     margin-bottom: 40px;
+    font-family: 'Seymour One';
     font-size: 30px;
     line-height: 1.3;
     text-align: center;
@@ -67,6 +68,7 @@
 
     @media screen and (min-width: 1200px) {
       font-size: 36px;
+      letter-spacing: 0.06em;
     }
   }
 }
@@ -77,8 +79,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 148px;
-  gap: 100px;
-  padding: 0;
+  gap: 160px;
+  padding: 0 0 60px;
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
@@ -95,10 +97,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding-top: 15px;
     width: 280px;
     height: 420px;
-    margin-bottom: 60px;
     background: #aec6a5;
     border-radius: 24px;
 
